Fixed footer spacing

--- a/main.css
+++ b/main.css
@@ -163,7 +163,7 @@ article ul li ul {
 
 footer {
     width: 50em;
-    margin: 1% 20%;
+    margin: 7% 20% 3% 20%;
     padding: 0;
     border: 0;
     
